# fake_type

./: Cargo.toml  README.md  README_EN.md
src/: lib.rs
tests/: fake_type_test.rs  hex_test.rs
