[package]
name = "fake_type"
version = "0.1.4"
authors = ["Borber <borber.drum@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Disguise files to another format with great speed, and recover them losslessly."
keywords = ["fake", "file"]
homepage = "https://github.com/Borber/fake_type"
documentation = "https://docs.rs/fake_type/"
repository = "https://github.com/Borber/fake_type"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
